--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-## The following requirements were added by pip freeze:
 cachetools==3.1.1
 certifi==2019.11.28
 chardet==3.0.4
@@ -15,6 +14,7 @@ itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
 oauthlib==3.1.0
+Pillow==7.1.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.7
 requests==2.22.0
